--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,8 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 /.vscode
+
+/Assets/Plugins/
+/Assets/Resources/
+/Assets/Plugins.meta
+/Assets/Resources.meta
