feat: atualiza gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,5 @@ crashlytics-build.properties
 /Assets/Resources/
 /Assets/Plugins.meta
 /Assets/Resources.meta
+/Assets/TextMesh Pro
+/Assets/TextMesh Pro.meta
